--- a/gamestyles.css
+++ b/gamestyles.css
@@ -5,7 +5,7 @@ body {
   font-family: Arial, sans-serif;
   background-image: url(MyAvatar6.jpg);
   background-size: 100%;
-  background-repeat: no-repeat;
+/*   background-repeat: no-repeat; */
 }
 
 #playe {
