--- a/gamestyles.css
+++ b/gamestyles.css
@@ -58,7 +58,7 @@ body {
 	background:#666;
 }
 
-/* .modaal-video-container {
+.modaal-video-container {
   position: relative;
   padding-bottom: 100%;
   height: 0;
@@ -70,7 +70,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: -120px;
-} */
+} 
 
 
 main {
