--- a/gamestyles.css
+++ b/gamestyles.css
@@ -60,13 +60,13 @@ body {
 
 .modaal-video-container {
   position: relative;
-  padding-bottom: 100%;
-  height: 0;
+  padding-bottom: 90%;
+  height: 100%;
   overflow: hidden;
   max-width: 100%;
   box-shadow: 0 0 10pxrgba(0,0,0,.3);
   background: #2c23a2;
-/*   max-width: 1331px; */
+  max-width: 1331px;
   margin-left: auto;
   margin-right: auto;
   margin-top: -120px;
